# bcg-data-challenge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
EDA/: EDA.ipynb  prelim_eda.ipynb
constants/: __init__.py  departments.py  paths.py
data/gold_datasets/: historical.parquet  ssp1_2_6.parquet  ssp2_4_5.parquet  ssp5_8_5.parquet
data/gold_datasets/predictions/: ssp1_2_6_xgboost_predictions.parquet  ssp2_4_5_xgboost_predictions.parquet  ssp5_8_5_xgboost_predictions.parquet
src/bcg_data_challenge/: __init__.py
src/data_pipelines/: bronze_to_silver.py  silver_to_gold.py
src/model_pipelines/: xgboost_model.py
tests/: __init__.py  test_example.py
utils/: logger.py
